--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
       <div class="container">
-        <h1>Hi!</h1>
+        <h1>Hi there!</h1>
       <nav>
           <ul>
               <li><a href="">Home</a></li>
